changed gnome-tweak-tools to gnome-tweaks

--- a/local.yml
+++ b/local.yml
@@ -136,7 +136,7 @@
         - htop
         - flatpak
         - snapd
-        - gnome-tweak-tool
+        - gnome-tweaks
         - enpass
         - vivaldi-stable
         - code
